k8s/concourse.yaml
################################################################################
# POSTGRES
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: concourse
  labels:
    app: concourse
    component: db
spec:
  selector:
    matchLabels:
      app: concourse
      component: db
  template:
    metadata:
      labels:
        app: concourse
        component: db
    spec:
      containers:
        - name: postgres
          image: postgres:12.3-alpine
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: concourse
spec:
  selector:
    app: concourse
    component: db
  ports:
    - protocol: TCP
      port: 5432

################################################################################
# WEB
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: concourse
  labels:
    app: concourse
    component: web
spec:
  selector:
    matchLabels:
      app: concourse
      component: web
  template:
    metadata:
      labels:
        app: concourse
        component: web
    spec:
      volumes:
        - name: keys
          secret:
            secretName: web-keys
      containers:
        - name: web
          image: concourse/concourse
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 2222
              name: worker-ssh
          volumeMounts:
            - name: keys
              readOnly: true
              mountPath: "/keys"
          args: [ web ]

---
apiVersion: v1
kind: Service
metadata:
  name: web-worker-gateway
  namespace: concourse
  labels:
    app: concourse
    component: web
spec:
  selector:
    app: concourse
    component: web
  ports:
    - port: 2222
      name: worker-ssh

---
apiVersion: v1
kind: Service
metadata:
  name: web-http
  namespace: concourse
  labels:
    app: concourse
    component: web
spec:
  selector:
    app: concourse
    component: web
  ports:
    - port: 8080
      name: http

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web
  namespace: concourse
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: concourse.localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: web-http
          servicePort: http

################################################################################
# WORKERS
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: concourse
  labels:
    app: concourse
    component: worker
spec:
  replicas: 3
  selector:
    matchLabels:
      app: concourse
      component: worker
  template:
    metadata:
      labels:
        app: concourse
        component: worker
    spec:
      volumes:
        - name: keys
          secret:
            secretName: worker-keys
      containers:
        - name: worker
          image: concourse/concourse
          ports:
            - containerPort: 8888
          volumeMounts:
            - name: keys
              readOnly: true
              mountPath: "/keys"
          args: [ worker ]
          securityContext:
            privileged: true

---
apiVersion: v1
kind: Service
metadata:
  name: worker
  namespace: concourse
  labels:
    app: concourse
    component: worker
spec:
  type: ClusterIP
  clusterIP: None
  ports: []
  selector:
    app: concourse
    component: worker
